--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <p>Email: vsinghal@ucsd.edu, varunraisinghal12@gmail.com</p>
       <p>Phone: 858-444-0091</p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/varunraisinghal/">https://www.linkedin.com/in/varunraisinghal/</a></p>
+      <p>Github: <a href="https://github.com/varunraisinghal">https://github.com/varunraisinghal</a></p>
     </section>
   </main>
 </body>
